--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 /* ========================================= */
 .hero-section {
     height: 100vh;
-    background: url('../images/header-bg1.jpg') center/cover;
+    background: url('../images/header-bg.jpg') center/cover;
     position: relative;
     display: flex;
     flex-direction: column;
